<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    card_view:cardCornerRadius="24dp"
    card_view:cardBackgroundColor="@color/light_gray"
    card_view:contentPadding="21dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/captions"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:id="@+id/captions"
            android:paddingVertical="21dp"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/captions"
            android:paddingStart="21dp"
            android:id="@+id/captionsText"
            android:paddingVertical="21dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_below="@+id/captions"
            android:id="@+id/image"
            android:paddingVertical="21dp"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/image"
            android:layout_below="@+id/captions"
            android:paddingStart="21dp"
            android:id="@+id/imageText"
            android:paddingVertical="21dp"
            android:gravity="center"
            android:layout_centerHorizontal="true"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:text="@string/date"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_below="@+id/image"/>
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/date"
            android:layout_below="@+id/image"
            android:paddingStart="21dp"
            android:id="@+id/dateText"
            android:gravity="center"
            />
    </RelativeLayout>

</android.support.v7.widget.CardView>